5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1667_2970.log
== TEST (2019-04-16 16:37:59) 
-- CODE:
t = int(input"6 meses")
i = round(((Qf/Q0)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
File "XXXX", line 1
    t = int(input"6 meses")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:12) 
-- CODE:
t = int(input"t")
i = round(((Qf/Q0)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
File "XXXX", line 1
    t = int(input"t")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:31) 
-- CODE:
t = int(input"t:")
i = round(((Qf/Q0)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
File "XXXX", line 1
    t = int(input"t:")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:58) 
-- CODE:
t = int(input("t:"))
i = round(((Qf/Q0)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = round(((Qf/Q0)**1/t)-1,5)
NameError: name 'Qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:24) 
-- CODE:
t = int(input("t:"))
i = round(((1.042.000/1.500.000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
File "XXXX", line 2
    i = round(((1.042.000/1.500.000)**1/t)-1,5)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:55) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:05) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- EXECUTION TIME:
0.150137
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
REAL
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
REAL
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
REAL
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:10) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:32) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- EXECUTION TIME:
0.123368
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
REAL
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
REAL
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
REAL
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:48) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:13) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:19) 
-- CODE:
t = int(input("t:"))
i = (((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(i <= 0.01):
TypeError: '<=' not supported between instances of 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:55) 
-- CODE:
t = float(input("t:"))
i = (((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(i <= 0.01):
TypeError: '<=' not supported between instances of 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:52) 
-- CODE:
t = int(input("t:"))
i = (((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(i <= 0.01):
TypeError: '<=' not supported between instances of 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:14) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:32) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- EXECUTION TIME:
0.31015
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
REAL
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
REAL
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
REAL
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:52) 
-- CODE:
t = float(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:22) 
-- CODE:
t = float(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- EXECUTION TIME:
0.166643
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
REAL
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
REAL
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
REAL
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:58) 
-- CODE:
t = float(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")
	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:47) 
-- CODE:
t = float(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
t = float(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:34) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**1/t)-1,5)

if(i <= 0.01):
	print("REAL")	
else:
	print("IRREAL")
-- OUTPUT:
REAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:07) 
-- CODE:
t = int(input("t:"))
i = round(((1042000/1500000)**(1/t)-1,5)

if(i <= 0.01):
	print("REAL")	
else:
	print("IRREAL")
-- ERROR:
File "XXXX", line 4
    if(i <= 0.01):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
